# student-exam-score-prediction

./: .gitignore  Dockerfile  Makefile  README.md  app.py  dv.pkl  model.pkl  notebook.ipynb  predict.py  pyproject.toml  train.py
