[project]
name = "student-performance-prediction"
version = "0.1.0"
description = "Predict student exam scores based on study habits and background"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pandas>=2.3.2",
    "ruff>=0.14.5",
    "scikit-learn==1.6.1",
    "uvicorn>=0.35.0",
]
